[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probegate"
version = "0.1.0"
description = "Per-span probe-validation gate for 国产模型 autonomous agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "SuperMarioYL" }]
keywords = [
    "abstention",
    "agents",
    "deepseek",
    "qwen",
    "glm",
    "guochan-model",
    "probe",
    "guardrails",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.7",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "rich>=13.7",
]

[project.scripts]
probegate = "probegate.cli:main"

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/SuperMarioYL/probegate"
Issues = "https://github.com/SuperMarioYL/probegate/issues"

[tool.setuptools.packages.find]
include = ["probegate*"]

[tool.setuptools.package-data]
probegate = ["ui/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
